Change Markdown logo

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Markdown** <img src=\"markdown.png\" alt=\"Markdown Monster icon\" style=\"float: left; margin-right: 10px; height: 40px\" />\n",
+    "## **Markdown** <img src=\"markdown.png\" alt=\"Markdown icon\" style=\"float: left; margin-right: 10px; height: 40px\" />\n",
     "     \n",
     "---"
    ]
