Add comment to code block

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -173,7 +173,8 @@
    "metadata": {},
    "source": [
     "To start, type `jupyter notebook` in the terminal/command prompt\n",
-    "\n",
+    "    \n",
+    "    # To add a code block, use 4 spaces or 1 tab\n",
     "    function squaed(x) {\n",
     "        return x * x;\n",
     "    }"
