Add miscellaneous information

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -148,6 +148,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Table** in Markdown\n",
+    "\n",
     "| ID |Score |\n",
     "|----|------|\n",
     "| 1  | 100  |\n",
@@ -161,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add photo and link\n",
+    "### Add **photo** and **link**\n",
     "\n",
     "[My GitHub](https://github.com/SupTarr)\n",
     "\n",
