Add miscellaneous information complete

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -111,6 +111,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Use # to create a heading\n",
+    "\n",
     "# Heading 1\n",
     "## Heading 2\n",
     "### Heading 3\n",
@@ -120,6 +122,8 @@
     "This is a paragraph.\n",
     "\n",
     "This is a second paragraph.\n",
+    "\n",
+    "Use `---` to create a horizontal line\n",
     "\n",
     "---"
    ]
