Add an output to operators

--- a/4-Operators.ipynb
+++ b/4-Operators.ipynb
@@ -142,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "625\n",
+      "1\n",
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 ** 3)\n",
     "print(5 ** 4)\n",
@@ -162,9 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.666666666666666\n",
+      "10\n",
+      "-10.666666666666666\n",
+      "-11\n"
+     ]
+    }
+   ],
    "source": [
     "print (32 / 3)\n",
     "print (32 // 3)\n",
@@ -184,9 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a = 3\n",
     "print(a)\n",
@@ -205,9 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a = 2\n",
     "print(a)\n",
@@ -217,9 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a = 2\n",
     "print(a)\n",
@@ -229,9 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "295\n",
+      "11.8\n",
+      "4\n",
+      "714924299\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "a = b = c = d = e = f = 59\n",
     "a -= 5\n",
@@ -258,9 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "a = 20\n",
     "print(a == 20)  # is equal to ?\n",
@@ -283,9 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "p = True\n",
     "q = False\n",
@@ -303,9 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "p = True\n",
     "q = False\n",
@@ -323,9 +418,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "p = True\n",
     "q = False\n",
@@ -342,9 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "username = input( \"Tell me your name: \")\n",
     "print(username == \"John\" or username == \"Jim\" )"
