--- a/2.6-Built-in Modules.ipynb
+++ b/2.6-Built-in Modules.ipynb
@@ -411,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter an integer n: 256\n",
-      "The square root of 256 is 16.0.\n"
+      "Enter an integer n: 10000\n",
+      "The square root of 10000 is 100.0.\n"
      ]
     }
    ],
@@ -493,14 +493,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "74f02f03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n",
+      "120\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt, factorial as fact\n",
     "print(sqrt(144))\n",
-    "print(fac)"
+    "print(fact(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e07859d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import *\n",
+    "print(sqrt(144))\n",
+    "print(factorial(5))"
    ]
   }
  ],
@@ -521,6 +551,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "69afb16850fb080b0d2f0cee190e8848b3ff785e95ea7eabe4fe94a2423f9ba5"
+   }
   }
  },
  "nbformat": 4,
