--- a/Lessons/3.1-Strings.ipynb
+++ b/Lessons/3.1-Strings.ipynb
@@ -126,6 +126,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bb6ea0f",
+   "metadata": {},
+   "source": [
+    "### `find()`\n",
+    "`find(sub[, start[, end]])`\n",
+    "\n",
+    "- **sub** (Required): The string searched for.\n",
+    "- **start** (Optional): Search start position.\n",
+    "- **end** (Optional): Search end position."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "97fce2c3",
