--- a/Lessons/2.5-Work with Data Types.ipynb
+++ b/Lessons/2.5-Work with Data Types.ipynb
@@ -317,11 +317,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2a6ca4e1",
    "metadata": {},
    "source": [
-    "In *String Multipication*, the *number* must be `int` only."
+    "In *String Multiplication*, the *number* must be `int` only."
    ]
   },
   {
@@ -680,7 +681,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -694,7 +695,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "69afb16850fb080b0d2f0cee190e8848b3ff785e95ea7eabe4fe94a2423f9ba5"
+   }
   }
  },
  "nbformat": 4,
