--- a/Lessons/4.1-List.ipynb
+++ b/Lessons/4.1-List.ipynb
@@ -280,15 +280,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Couldn't find program: 'false'\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 2, in <module>\n",
+      "NameError: name 'colors' is not defined\n"
      ]
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "%%script python --no-raise-error\n",
     "\n",
     "print(colors[10])"
    ]
@@ -741,15 +743,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Couldn't find program: 'false'\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 3, in <module>\n",
+      "NameError: name 'colors' is not defined\n"
      ]
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "%%script python --no-raise-error\n",
     "# ValueError: list.remove(x): x not in list\n",
     "\n",
     "colors.remove('purple')\n",
@@ -864,15 +868,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Couldn't find program: 'false'\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 3, in <module>\n",
+      "NameError: name 'colors' is not defined\n"
      ]
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "%%script python --no-raise-error\n",
     "# Delete completely\n",
     "\n",
     "del colors\n",
@@ -1249,15 +1255,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Couldn't find program: 'false'\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 2, in <module>\n",
+      "NameError: name 'friends' is not defined\n"
      ]
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "%%script python --no-raise-error\n",
     "\n",
     "friends.index('Pui', 3, 5)"
    ]
