--- a/Lessons/4.2-Tuple.ipynb
+++ b/Lessons/4.2-Tuple.ipynb
@@ -373,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2188400183680 (1, 2, 3)\n"
+      "1706194405760 (1, 2, 3)\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2188399197888 (40, 50)\n"
+      "1706193734208 (40, 50)\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2188400218240 (1, 2, 3, 40, 50)\n"
+      "1706194530800 (1, 2, 3, 40, 50)\n"
      ]
     }
    ],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -783,10 +783,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Moon' in planets)\n",
+    "print('Venus' in planets)"
+   ]
   }
  ],
  "metadata": {
