--- a/Lessons/1-Get Started.ipynb
+++ b/Lessons/1-Get Started.ipynb
@@ -50,22 +50,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n"
+      "Hello world!\r\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'Print' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello world!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mPrint\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is the first line of code I\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mve ever written!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI am so excited to learn Python!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# NameError: name 'Print' is not defined\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Print' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 3, in <module>\n",
+      "NameError: name 'Print' is not defined. Did you mean: 'print'?\n"
      ]
     }
    ],
    "source": [
+    "%%script python --no-raise-error\n",
+    "\n",
     "print(\"Hello world!\")\n",
     "Print(\"This is the first line of code I've ever written!\")\n",
     "print(\"I am so excited to learn Python!\")\n",
@@ -154,19 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (2432162457.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"This is the first line of code I've ever written!\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  File \"<stdin>\", line 3\n",
+      "    print(\"This is the first line of code I've ever written!\")\n",
+      "IndentationError: unexpected indent\n"
      ]
     }
    ],
    "source": [
+    "%%script python --no-raise-error\n",
+    "\n",
     "print(\"Hello world!\")\n",
     "  print(\"This is the first line of code I've ever written!\")\n",
     "print(\"I am so excited to learn Python!\")\n",
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
