--- a/Lessons/2.3-Operators.ipynb
+++ b/Lessons/2.3-Operators.ipynb
@@ -116,18 +116,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m2\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m) \n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# ZeroDivisionError: division by zero\u001b[39;00m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 2, in <module>\n",
+      "ZeroDivisionError: division by zero\n"
      ]
     }
    ],
    "source": [
+    "%%script python --no-raise-error\n",
+    "\n",
     "print(2/0) \n",
     "# ZeroDivisionError: division by zero"
    ]
