--- a/Lessons/3.1-Strings.ipynb
+++ b/Lessons/3.1-Strings.ipynb
@@ -261,8 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> I'am ok!\n",
-      "5\n"
+      ">> I'm ok!\n",
+      "4\n"
      ]
     }
    ],
@@ -284,8 +284,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> I'am ok!\n",
-      "5\n"
+      ">> I'm ok!\n",
+      "4\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
