--- a/Lessons/5.2-Function.ipynb
+++ b/Lessons/5.2-Function.ipynb
@@ -289,12 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('test.txt', mode = 'w') as f:\n",
-    "    f.write('')"
+    "    f.write('Hello world another file.')"
    ]
   }
  ],
