Finish module: add comments

--- a/Lessons/5.4-Module/5.4-Module.ipynb
+++ b/Lessons/5.4-Module/5.4-Module.ipynb
@@ -142,6 +142,7 @@
     }
    ],
    "source": [
+    "# C:\\Users\\tatas\\AppData\\Roaming\\Python\\Python310\\site-packages\\dice.py\n",
     "import dice\n",
     "\n",
     "dice.roll_dice(4)"
@@ -178,6 +179,7 @@
     }
    ],
    "source": [
+    "# from sample folder that have dice.py\n",
     "from sample import dice as dc\n",
     "\n",
     "dc.roll_dice(5)"
