--- a/Lessons/4.2-Tuple.ipynb
+++ b/Lessons/4.2-Tuple.ipynb
@@ -373,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1706194405760 (1, 2, 3)\n"
+      "2329738124736 (1, 2, 3)\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1706193734208 (40, 50)\n"
+      "2329737167936 (40, 50)\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1706194530800 (1, 2, 3, 40, 50)\n"
+      "2329738228208 (1, 2, 3, 40, 50)\n"
      ]
     }
    ],
@@ -614,7 +614,7 @@
    "source": [
     "# Use list comprehension\n",
     "\n",
-    "[print (x) for x in planets]"
+    "[print(x) for x in planets]"
    ]
   },
   {
@@ -682,14 +682,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n"
+      "(1, 2, 3)\n"
      ]
     }
    ],
    "source": [
     "# Use tuple() function\n",
     "\n",
-    "c = list(t)\n",
+    "c = tuple(t)\n",
     "print(c)"
    ]
   },
@@ -817,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
