Add way to create empty dict

--- a/Lessons/4.3-Dictionaries.ipynb
+++ b/Lessons/4.3-Dictionaries.ipynb
@@ -87,6 +87,8 @@
      "output_type": "stream",
      "text": [
       "{}\n",
+      "<class 'dict'>\n",
+      "{}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -96,7 +98,11 @@
     "\n",
     "d = {}\n",
     "print(d)\n",
-    "print(type(d))"
+    "print(type(d))\n",
+    "\n",
+    "e = dict([])\n",
+    "print(e)\n",
+    "print(type(e))"
    ]
   },
   {
