Change some wrong input

--- a/Lessons/5.1-Function.ipynb
+++ b/Lessons/5.1-Function.ipynb
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "<class 'function'>\n",
-      "<function foo at 0x000001867DBB5360>\n"
+      "<function foo at 0x0000018B4B781990>\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
     "        \n",
     "        if k == 'last_name': lname = v\n",
     "            \n",
-    "        if k == 'nick_name': nname = ' ('+v+')'\n",
+    "        if k == 'nick_name': nname = ' (' + v + ')'\n",
     "            \n",
     "    return 'Hello ' + title + fname + ' ' + lname + nname"
    ]
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello Suapkrit '"
+       "'Hello Supakrit '"
       ]
      },
      "execution_count": 19,
@@ -406,7 +406,7 @@
     }
    ],
    "source": [
-    "greeting('Suapkrit')"
+    "greeting('Supakrit')"
    ]
   },
   {
@@ -417,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello Suapkrit Chuchatwannakul (Tata)'"
+       "'Hello Supakrit Chuchatwannakul (Tata)'"
       ]
      },
      "execution_count": 20,
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "greeting('Suapkrit', last_name = 'Chuchatwannakul', nick_name = 'Tata')"
+    "greeting('Supakrit', last_name = 'Chuchatwannakul', nick_name = 'Tata')"
    ]
   },
   {
@@ -437,7 +437,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello Mr.Suapkrit Chuchatwannakul (Tata)'"
+       "'Hello Mr.Supakrit Chuchatwannakul (Tata)'"
       ]
      },
      "execution_count": 21,
@@ -446,7 +446,7 @@
     }
    ],
    "source": [
-    "greeting('Suapkrit', last_name = 'Chuchatwannakul', nick_name = 'Tata', gender = 'male')"
+    "greeting('Supakrit', last_name = 'Chuchatwannakul', nick_name = 'Tata', gender = 'male')"
    ]
   },
   {
