feat: add List Comprehensions

--- a/Lessons/4.1-List.ipynb
+++ b/Lessons/4.1-List.ipynb
@@ -1390,6 +1390,83 @@
    "source": [
     "print(planets[::-1])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List Comprehensions\n",
+    "\n",
+    "List comprehensions are a concise way to create lists. They consist of `square brackets` containing an expression followed by the `for` keyword; the result will be a list whose results match the expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([x * x for x in [0, 1, 2, 3]])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given their flexibility, list comprehensions generally make use of the `range` function that returns a range of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([x * x for x in range(4)])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes you may want to `filter` the elements by a given condition; the `if` keyword can be used in those cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([x for x in range(10) if x % 2 == 0])"
+   ]
   }
  ],
  "metadata": {
@@ -1408,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
