feat: Iterator Classes

--- a/Lessons/6-Classes.ipynb
+++ b/Lessons/6-Classes.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,6 +421,116 @@
     "        self.x2 = x1 + length # class variable\n",
     "        self.y2 = y1 + length # class variable\n",
     "        super().__init__(self.x1, self.y1, self.x2, self.y2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterator Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyRange:\n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "\n",
+    "    def __iter__(self): # returns the iterator object itself\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self): # returns the next item in the sequence\n",
+    "        if self.a < self.b:\n",
+    "            value = self.a\n",
+    "            self.a += 1\n",
+    "            return value\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "for value in MyRange(1, 4):\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyRange:\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def next(self):\n",
+    "        evenArray = []\n",
+    "        for i in range(1, self.n + 1):\n",
+    "            if i % 2 == 0:\n",
+    "                evenArray.append(i)\n",
+    "        return evenArray\n",
+    "\n",
+    "myrange = MyRange(8)\n",
+    "print (myrange.next())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyRange:\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def next(self):\n",
+    "        myArray = []\n",
+    "        for i in range(self.n):\n",
+    "            if i == 0 or i == 1:\n",
+    "                myArray.append(i)\n",
+    "            else:\n",
+    "                myArray.append(myArray[i-2] + myArray[i-1])\n",
+    "        return myArray\n",
+    "\n",
+    "myrange = MyRange(8)\n",
+    "print(myrange.next())"
    ]
   }
  ],
